# LimeLight

./: .env.example  .gitignore  API_DOC.md  API_ENDPOINTS.md  README.md  SETUP_SOLANA.md  index.html  keypair.json  metadata.json  package-lock.json  package.json  pyproject.toml  requirements.txt  test-tts.js  test-url.js  vite.config.ts
data/: metadata_1.json  metadata_2.json  metadata_3.json  projects.json
lambda/: getPresignedGetItems.py
src/: App.tsx  __init__.py  __main__.py  addresses.py  api.py  bonding_curve.py  cli.py  gui.py  ipfs_upload.py  main.tsx  metaplex_metadata.py  phantom_server.py  solana_mint.py  state.py  token_metadata.py
src/components/: StartupCard.tsx
src/contexts/: AuthContext.tsx
src/pages/: Discover.tsx  Feed.tsx  Landing.tsx  Portfolio.tsx  Profile.tsx  SignIn.tsx  SignUp.tsx  Studio.tsx
