[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "startup-cli"
version = "0.1.0"
description = "CLI for tokenized startup projects on Solana Devnet with bonding curve pricing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "solana>=0.36.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
startup-cli = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
